a bit of cleanup

--- a/demo.html
+++ b/demo.html
@@ -13,12 +13,10 @@
   <a href="http://960.gs/">The 960-Grid Grid Grid System Framework</a>
 </h1>
 
-<main class="container_12">
-  <h2>
-    12 Column Grid
-  </h2>
+<main>
+  <h2>12 Column Grid</h2>
   <p class="warning">This is a demonstration of a CSS Grid Layout Framework. You need to test it in a browser where Grid works.</p>
-  <ul>
+  <ul class="container">
     <li class="grid-column-start-1 grid-column-end-12">
       12 columns
     </li>
