oh right — it goes to 11... I mean 13!

--- a/demo.html
+++ b/demo.html
@@ -17,117 +17,120 @@
   <h2>12 Column Grid</h2>
   <p class="warning">This is a demonstration of a CSS Grid Layout Framework. You need to test it in a browser where Grid works.</p>
   <ul class="container">
-    <li class="grid-column-start-1 grid-column-end-12">
+    <li class="grid-column-start-1 grid-column-end-13">
       12 columns
     </li>
-    <li class="grid-column-start-1 grid-column-end-2 ">
+    <li class="grid-column-start-1 grid-column-end-2">
       1 column
     </li>
-    <li class="grid-column-start-2 grid-column-end-12 ">
+    <li class="grid-column-start-2 grid-column-end-13">
       11 columns
     </li>
-    <li class="grid-column-start-1 grid-column-end-3 ">
+    <li class="grid-column-start-1 grid-column-end-3">
       2 columns
     </li>
-    <li class="grid-column-start-3 grid-column-end-12 ">
+    <li class="grid-column-start-3 grid-column-end-13">
       10 columns
     </li>
-    <li class="grid-column-start-1 grid-column-end-4 ">
+    <li class="grid-column-start-1 grid-column-end-4">
       3 columns
     </li>
-    <li class="grid-column-start-4 grid-column-end-12 ">
+    <li class="grid-column-start-4 grid-column-end-13">
       9 columns
     </li>
-    <li class="grid-column-start-1 grid-column-end-5 ">
+    <li class="grid-column-start-1 grid-column-end-5">
       4 columns
     </li>
-    <li class="grid-column-start-5 grid-column-end-12 ">
+    <li class="grid-column-start-5 grid-column-end-13">
       8 columns
     </li>
-    <li class="grid-column-start-1 grid-column-end-6 ">
+    <li class="grid-column-start-1 grid-column-end-6">
       5 columns
     </li>
-    <li class="grid-column-start-6 grid-column-end-12 ">
+    <li class="grid-column-start-6 grid-column-end-13">
       7 columns
     </li>
-    <li class="grid-column-start-1 grid-column-end-7 ">
+    <li class="grid-column-start-1 grid-column-end-7">
       6 columns
     </li>
-    <li class="grid-column-start-7 grid-column-end-12 ">
+    <li class="grid-column-start-7 grid-column-end-13">
       6 columns
     </li>
-    <li class="grid-column-start-1 grid-column-end-2 ">
+    <li class="grid-column-start-1 grid-column-end-2">
       1 column
     </li>
-    <li class="grid-column-start-2 grid-column-end-3 ">
+    <li class="grid-column-start-2 grid-column-end-3">
       1 column
     </li>
-    <li class="grid-column-start-3 grid-column-end-4 ">
+    <li class="grid-column-start-3 grid-column-end-4">
       1 column
     </li>
-    <li class="grid-column-start-4 grid-column-end-5 ">
+    <li class="grid-column-start-4 grid-column-end-5">
       1 column
     </li>
-    <li class="grid-column-start-5 grid-column-end-6 ">
+    <li class="grid-column-start-5 grid-column-end-6">
       1 column
     </li>
-    <li class="grid-column-start-6 grid-column-end-7 ">
+    <li class="grid-column-start-6 grid-column-end-7">
       1 column
     </li>
-    <li class="grid-column-start-7 grid-column-end-8 ">
+    <li class="grid-column-start-7 grid-column-end-8">
       1 column
     </li>
-    <li class="grid-column-start-8 grid-column-end-9 ">
+    <li class="grid-column-start-8 grid-column-end-9">
       1 column
     </li>
-    <li class="grid-column-start-9 grid-column-end-10 ">
+    <li class="grid-column-start-9 grid-column-end-10">
       1 column
     </li>
-    <li class="grid-column-start-10 grid-column-end-11 ">
+    <li class="grid-column-start-10 grid-column-end-11">
       1 column
     </li>
-    <li class="grid-column-start-11 grid-column-end-12 ">
+    <li class="grid-column-start-11 grid-column-end-12">
       1 column
     </li>
-    <li class="grid-column-start-1 grid-column-end-4 ">
+    <li class="grid-column-start-12 grid-column-end-13">
+      1 column
+    </li>
+    <li class="grid-column-start-1 grid-column-end-4">
       3 columns
     </li>
-    <li class="grid-column-start-4 grid-column-end-7 ">
+    <li class="grid-column-start-4 grid-column-end-7">
       3 columns
     </li>
-    <li class="grid-column-start-7 grid-column-end-8 ">
+    <li class="grid-column-start-7 grid-column-end-8">
       1 column
     </li>
-    <li class="grid-column-start-8 grid-column-end-12 ">
+    <li class="grid-column-start-8 grid-column-end-13">
       5 columns
     </li>
-    <li class="grid-column-start-1 grid-column-end-2 ">
+    <li class="grid-column-start-1 grid-column-end-2">
       1 column
     </li>
-    <li class="grid-column-start-2 grid-column-end-7 ">
+    <li class="grid-column-start-2 grid-column-end-7">
       5 columns
     </li>
-    <li class="grid-column-start-7 grid-column-end-10 ">
+    <li class="grid-column-start-7 grid-column-end-10">
       3 columns
     </li>
-    <li class="grid-column-start-10 grid-column-end-12 ">
+    <li class="grid-column-start-10 grid-column-end-13">
       3 columns
     </li>
     
-    <li class="grid-column-start-1 grid-column-end-12 hero">
+    <li class="grid-column-start-1 grid-column-end-13 hero">
       <h2>We Are Unique</h2>
       <h3>Find Out How Unique</h3>
     </li>
-    <li class="grid-column-start-1 grid-column-end-12 teaser">
+    <li class="grid-column-start-1 grid-column-end-13 teaser">
       This is the bit where you talk about how unique you are as a business and that you're different to all of your competitors. Your website looks the same though.
     </li>
-    <li class="grid-column-start-1 grid-column-end-4 ">
+    <li class="grid-column-start-1 grid-column-end-5">
       Always
     </li>
-    <li class="grid-column-start-4 grid-column-end-8 ">
+    <li class="grid-column-start-5 grid-column-end-9">
       Three
     </li>
-    <li class="grid-column-start-8 grid-column-end-12 ">
+    <li class="grid-column-start-9 grid-column-end-13">
       Columns
     </li>
   </ul>
