editing We Are Unique example

--- a/demo.html
+++ b/demo.html
@@ -116,10 +116,12 @@
     <li class="grid-column-start-10 grid-column-end-13">
       3 columns
     </li>
-    
+  </ul>
+  <h2>Let's see if we can implement <a href="http://www.novolume.co.uk/blog/all-websites-look-the-same/">this amazing design</a> by Dave Ellis</h2>
+  <ul class="container">
     <li class="grid-column-start-1 grid-column-end-13 hero">
-      <h2>We Are Unique</h2>
-      <h3>Find Out How Unique</h3>
+      <h3>We Are Unique</h3>
+      <h4>Find Out How Unique</h4>
     </li>
     <li class="grid-column-start-1 grid-column-end-13 teaser">
       This is the bit where you talk about how unique you are as a business and that you're different to all of your competitors. Your website looks the same though.
