--- a/index.html
+++ b/index.html
@@ -15,8 +15,26 @@
 <main> 
   
   <h1>The 960 grid Grid grid system Framework</h1>
-  <h2>Because 12 equal columns are always better.</h2>
+  <h2>Because 12 equal columns are always better.™</h2>
   <h2>Coming Soon.</h2>
+  
+  <p><a href="/demo.html">Demo</a></p>
+
+  <p><a href="/download/960gridgridgrid.css.zip">Download</a></p>
+  
+  <h2>Tap into the power of the original.</h2>
+  <h2>960 Grid</h2>
+  
+  <p>It was in 2005 that we all decided we should always use only 12-columns on every single website.</p>
+  
+  <p>Those columns should be equal width, and have 10px gutters.</p> 
+  
+  <p>While the industry has switched from fixed-width to responsive, from 960 to Bootstrap, we all still agree, we must use 12 columns. (Or maybe 16).</p>
+  
+  <p>It is in this vein that we have created an ultra-modern Grid Layout-based grid framework for 2017. Thus the name:</p>
+  
+  <h1>960 grid Grid grid</h1> 
+  <h3>Why use anything but 12 columns?™</h3>
   
 </main>
 
