--- a/index.html
+++ b/index.html
@@ -38,8 +38,26 @@
   <p><a href="/download/960gridgridgrid.css.zip">Download</a></p>
   
   <p>[video]</p>
-
   
+  <h3>Coming Soon: 960-grid Grid grid Responsive Edition</h3>
+  
+<p>Where we predetermine which breakpoints will work best for your project. (Even though we have no idea what you are making.)</p>
+
+<p>We'll have all the breakpoints you need:</p>
+<ul>
+  <li>small phone</li>
+  <li>medium phone</li>
+  <li>large phone</li>
+  <li>small tablet</li>
+  <li>medium tablet</li>
+  <li>large tablet</li>
+  <li>medium desktop</li>
+  <li>large desktop</li>
+  <li>extra-large desktop</li>
+  <li>*and by desktop we actually mean laptop. We call it desktop to make sure we all agree this computer will never be mobile and will always have a fast internet connection exactly like the one in your office.</li>
+  <li>*we don't have any real desktop computer screen sizes, because we haven't thought about those computers much lately.
+  <li>*we will not include television sizes, because who uses their television to get online, besides all the people with gaming consoles. And maybe anyone who watches TV.</li>
+  <li>*and we won't think about watches or other tiny screens, because we think Apple screwed up the iWatch and this market is dead.</li>
 </main>
 
 </body>
